Added Roles w/ caching; seed data now working properly
