# src/routes/index.ts
@@ -1,6 +1,7 @@
 import express from "express";
 import PingController from "../controllers/ping";
 import UserRouter from "../routes/user.router";
+import RoleRouter from "../routes/role.router";
 
 const router = express.Router();
 
@@ -11,5 +12,6 @@ router.get("/ping", async (_req, res) => {
 });
 
 router.use("/users", UserRouter);
+router.use("/roles", RoleRouter);
 
 export default router;
